tests/paczka1/fuzzy1/30994899.err
Error in line 2: cwg A711 40,9
Error in line 10: S272 S272 41,9
Error in line 18: JJx0CMPGqV6 S983 90,7
Error in line 22: S272 S272 13,5
Error in line 17: 5pmtq5Ma S272 21,9
Error in line 23: S272 S983 13,6
Error in line 29: S272 A711 43,9
Error in line 21: JJx0CMPGqV6 A711 91,1
Error in line 32: JJx0CMPGqV6 S165 62,1
